<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="decorative_image" translatable="false">@null</string>

    <!-- region Theme -->
    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>
    <!-- endregion -->

    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="no_content">No content found</string>

    <string name="searchbar_hint">Search game</string>
    <string name="searchbar_clear">Clear search term</string>
    <string name="expansion_icon">Expansion icon</string>
    <string name="settings">Settings</string>
    <string name="content_settings">Personalize your application experience</string>

    <string name="browse_games">Collection</string>
    <string name="content_browse_games">Browse game collection</string>
    <string name="game_tools">Game tools</string>
    <string name="content_game_tools">Browse companion tools for games</string>

    <string name="display_all">Display all</string>
    <string name="display_collection">My collection</string>
    <string name="display_wishlist">My wishlist</string>
    <string name="display_solo">Single player playable</string>
    <string name="display_filler">Filler games</string>

    <string name="change_display">Toggle view</string>
    <string name="content_change_display">Switch display of your collection</string>

    <string name="bgg_username">BoardGameGeek Username</string>
    <string name="bgg_username_summary">Your BoardGameGeek account or pseudo to retrieve your games</string>
    <string name="filter_previously_own">Display previously own games</string>
    <string name="filter_previously_own_summary">Show all games you do not own anymore in all application</string>

    <string name="filters">Filter games</string>
    <string name="filters_desc">Display filter screen with different parameters</string>
    <string name="rs_min_rating">Rate between</string>
    <string name="rs_min_weight">Weight between</string>
    <string name="rs_min_duration">Duration between</string>

    <string name="description">Description</string>

    <string name="link_to_boardgamegeek" translatable="false">BoardGameGeek</string>
    <string name="link_to_bgstats" translatable="false">BgStats</string>

    <!-- Sample -->
    <string name="sample_game_title" translatable="false">Ticket to Ride</string>
    <string name="sample_game_category" translatable="false">Designer : Alan R. Moon</string>
    <string name="sample_game_description" translatable="false">With elegantly simple gameplay, Ticket to Ride can be learned in under 15 minutes. Players collect cards of various types of train cars they then use to claim railway routes in North America. The longer the routes, the more points they earn. Additional points come to those who fulfill Destination Tickets – goal cards that connect distant cities; and to the player who builds the longest continuous route.</string>
</resources>
