<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="Cubenbois"
        android:icon="@drawable/ic_user_solid"
        android:key="bgg_username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/bgg_username_summary"
        android:title="@string/bgg_username"
        app:singleLineTitle="true" />

    <ListPreference
        android:defaultValue="@string/pref_night_auto"
        android:icon="@drawable/ic_eclipse_solid"
        android:dialogTitle="@string/pref_night_dialog"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/list_preference_themes"
        android:entryValues="@array/list_preference_themes_values"
        app:key="@string/pref_key_night"
        app:summary="@string/pref_night_summary"
        app:title="@string/pref_night_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_person_carry_box_solid"
        android:key="display_previously_own"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/filter_previously_own_summary"
        android:title="@string/filter_previously_own"
        app:singleLineTitle="true"/>

</PreferenceScreen>
